cli/tests/testdata/run/extension_import.ts.out
error: Cannot load extension module from external code
    at [WILDCARD]/extension_import.ts:1:8
