cli/tests/testdata/run/extension_import.ts
import "ext:runtime/01_errors.js";
